fix: Placeholder mobile overflow

--- a/apps/client/src/app/globals.css
+++ b/apps/client/src/app/globals.css
@@ -86,11 +86,13 @@
 }
 
 .tiptap p.is-editor-empty:first-child::before {
-  color: #adb5bd;
+  color: #adb5bdc9;
   content: attr(data-placeholder);
   float: left;
   height: 0;
   pointer-events: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 /* Message */
